Correct CSS positioning and flex-direction
Fix positioning and layout issues in player and controls.

--- a/style.css
+++ b/style.css
@@ -56,7 +56,9 @@ header h1 {
     width: 200px;
     margin: auto;
     position: relative;
-    left: 30 px;
+    top: 100 px;
+  
+    left: 10px;
     height: 150 px;
     padding: 20px;
     background-image: radial-gradient(#090,
@@ -69,7 +71,7 @@ header h1 {
 
 .controls {
     display: flex;
-  fex-direction: rows;
+  flex-direction: rows;
   align-items: normal;
     margin: 10px 0;
 }
